[package]
edition = "2021"
name    = "shoe"
version = "0.1.0"

[[bin]]
name = "shoe"
path = "./src/bin/main.rs"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
bt-hci = "0.2.1"
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c3"] }
esp-wifi = { version = "0.13.0", features = [
  "ble",
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32c3",
] }
heapless = { version = "0.8.0", default-features = false }
l298-motor = { git = "https://github.com/JoeWildfong/l298-motor.git", version = "0.1.0" }
static_cell = { version = "2.1.1", default-features = false }
trouble-host = { version = "0.1.0", features = ["defmt"] }
uuid = { version = "1.17.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
